--- a/mystyle.css
+++ b/mystyle.css
@@ -11,6 +11,15 @@
 
 table {
     margin: auto;
+    
+  }
+  
+ tr {
+    border-bottom: 1px solid #ddd;
+  }
+
+  th, td {
+    padding: 5px;
   }
 
 .container {
@@ -20,7 +29,7 @@ table {
 
 /*  one class selector that is used at least two times to style HTML elements */
 .my-class {
-  color: blue;
+color: black;
   font-size: 18px;
 }
 
